--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,11 @@ dependencies {
     testCompile "junit:junit:4.12"
     testCompile "io.micronaut:micronaut-inject-java"
     testCompile "org.hamcrest:hamcrest-all:1.3"
+
+    /* Mysql database dependencies */
+    compile "io.micronaut.configuration:micronaut-hibernate-gorm"
+    compile "io.micronaut.configuration:micronaut-jdbc-tomcat"
+    runtime group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 }
 
 shadowJar {
